syntax = "proto3";
package demo.ping.v1;


option java_package = "com.example.demo.v1";
option java_multiple_files = true;


service Pinger {
  rpc Ping(PingRequest) returns (PingResponse) {}
}


message PingRequest {string name = 1;}
message PingResponse {string message = 1;}