syntax = "proto3";
package demo.pong.v1;

option java_package = "com.example.demo.v1";
option java_multiple_files = true;

import "ping.proto";

service Ponger {
  rpc Pong(PongRequest) returns (PongResponse) {}
}

message PongRequest {
  string name = 1;
}

message PongResponse {
  string message = 1;
  demo.ping.v1.ErrorDetail error = 2;
}
